--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" sizes="16x16">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon@2x.png" sizes="32x32">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon@3x.png" sizes="48x48">
-    <meta name="description" content="Safebit" />
-    <meta property="og:title" content="Safebit" />
-    <meta property="og:description" content="Safebit" />
+    <meta name="description" content="Cryptoprint" />
+    <meta property="og:title" content="Cryptoprint" />
+    <meta property="og:description" content="Cryptoprint" />
     <!-- <meta property="og:image" content="%PUBLIC_URL%/images" /> -->
     <meta name="theme-color" content="#ACE">
     <!--
@@ -27,10 +27,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Safebit</title>
+    <title>Cryptoprint</title>
     <script type="text/javascript">
       var l = window.location
-      if ((/\.safebit\.io$/i).test(l.host) && l.protocol !== 'https:') {
+      if ((/\.cryptoprint\.io$/i).test(l.host) && l.protocol !== 'https:') {
         window.location.href = l.href.replace('http://', 'https://')
       }
       window.readyToReload = setTimeout(function () {
@@ -39,12 +39,12 @@
     </script>
     <script type="text/javascript">
       (window.startLoad = Date.now())
-      console.info(`Safebit - Ready.`)
+      console.info(`Cryptoprint - Ready.`)
       </script>
   </head>
   <body>
     <noscript>
-      You need JavaScript to use Safebit.
+      You need JavaScript to use Cryptoprint
     </noscript>
     <div id="root"></div>
     <!--
