changed color header

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Cryptoprint" />
     <meta property="og:description" content="Cryptoprint" />
     <!-- <meta property="og:image" content="%PUBLIC_URL%/images" /> -->
-    <meta name="theme-color" content="#ACE">
+    <meta name="theme-color" content="#333">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
