--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon@2x.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon@3x.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/app-icon/app-icon.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/app-icon/app-icon@2x.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/app-icon/app-icon@3x.png" sizes="48x48">
     <meta name="description" content="Cryptoprint" />
     <meta property="og:title" content="Cryptoprint" />
     <meta property="og:description" content="Cryptoprint" />
