--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     </script>
     <script type="text/javascript">
       (window.startLoad = Date.now())
-      console.info(`Cryptoprint - Ready.`)
+      console.info('Cryptoprint - Ready.')
       </script>
   </head>
   <body>
